OO-3350: error messages if the score configuration of a check list is not valid

--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
@@ -48,6 +48,8 @@ details=Details
 done.by=Erledigt von\:
 down=Runter
 edit.checkbox=Checkbox bearbeiten
+error.missing.score.config=Fehlende Bewertungskonfiguration\: "$\:config.points.min" or "$\:config.points.max"
+error.missing.cutvalue.config=Fehlende Bewertungskonfiguration\: "$\:config.cutvalue"
 file=Datei
 filter.all=Alle anzeigen
 form.individual.assessment.docs=$org.olat.course.nodes.ms\:form.individual.assessment.docs
