--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_it.properties
@@ -44,6 +44,8 @@ details=Dettagli
 done.by=Completato da\:
 down=Gi\u00F9
 edit.checkbox=Modificare checkbox
+error.missing.score.config=Configurazione del punteggio mancante\: "$\:config.points.min" or "$\:config.points.max"
+error.missing.cutvalue.config=Configurazione del punteggio mancante\: "$\:config.cutvalue"
 file=File
 filter.all=Mostra tutto
 form.error.date=Indicare una data.
