--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_pt_BR.properties
@@ -48,6 +48,8 @@ details=Detalhes
 done.by=Completado por\:
 down=Baixar
 edit.checkbox=Editar checkbox
+error.missing.score.config=Configura\u00E7\u00E3o pontua\u00E7\u00E3o faltante\: "$\:config.points.min" or "$\:config.points.max"
+error.missing.cutvalue.config=Configura\u00E7\u00E3o pontua\u00E7\u00E3o faltante\: "$\:config.cutvalue"
 file=Arquivo
 filter.all=Mostrar tudo
 form.error.date=Uma data deve ser indicada.
