--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_fr.properties
@@ -97,7 +97,7 @@ error.file.invalid=$org.olat.core.commons.modules.bc\:cfile.name.notvalid
 error.max.documents=Vous ne pouvez pas d\u00E9poser plus de <b>{0}</b> documents, mais vous pouvez encore \u00E9diter ou \u00E9changer un fichier.
 error.missing.file=Le fichier d'un devoir est manquant.
 error.missing.group=Vous n'avez pas encore choisi un groupe.
-error.missing.score.config=Configuration de l'\u00E9valuation est manquante
+error.missing.score.config=Configuration d'\u00E9valuation incompl\u00E8te
 error.missing.solutions=Vous n'avez pas encore t\u00E9l\u00E9charg\u00E9 de solution.
 error.missing.tasks=Vous n'avez pas encore ajouter de devoir.
 error.no.group=Vous n'\u00EAtes inscrit dans aucun groupe.
