--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
@@ -48,6 +48,8 @@ details=Details
 done.by=Completed by\:
 down=Down
 edit.checkbox=Edit checkbox
+error.missing.score.config=Missing score configuration\: "$\:config.points.min" or "$\:config.points.max"
+error.missing.cutvalue.config=Missing score configuration\: "$\:config.cutvalue"
 file=File
 filter.all=Show all
 form.error.date=A date must be indicated.
