OO-3170: License management: Data model, administration of license types, addition and edition of licenses for learning resources

--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_de.properties
@@ -121,6 +121,7 @@ cif.expenditureOfWork=Zeitaufwand
 cif.externalid=Extern ID
 cif.externalref=Kennzeichen
 cif.externalref.hover=Eine externe Kennung f\u00FCr diese Ressource die in der Kurs\u00FCbersicht angezeigt wird.
+cif.freetext=Lizenztext
 cif.groups=Gruppen
 cif.id=Id
 cif.id.na=Nicht verf\u00FCgbar
@@ -128,6 +129,9 @@ cif.initialAuthor=Erstellt durch
 cif.lastUsage.na=-
 cif.lastusage=Letzter Zugriff
 cif.launched=Anzahl Aufrufe
+cif.license=Lizenz
+cif.license.text=Lizenztext
+cif.licensor=Lizenzgeber
 cif.location=Durchf\u00FChrungsort
 cif.mainLanguage=Hauptsprache
 cif.managedflags=Extern verwaltete Module
@@ -342,6 +346,7 @@ info.entry.read.only=Der Eintrag ist erfolgreich beendet.
 info.header=<i class\='o_icon o_icon-lg o_icon_info_resource'> </i>
 info.message.change.title=Der Kurs wurde erfolgreich auf den Status [deaktiviert] gesetzt.
 launch.noaccess=Sie haben zu wenig Berechtigungen, um diese Lernressource zu starten.
+license.admin.title=Lernressourcen
 lifecycle.label=Name
 lifecycle.softkey=Bezeichnung
 lifecycle.validFrom=$\:cif.date.start
@@ -545,6 +550,7 @@ table.header.key=ID
 table.header.lastName=$org.olat.group.ui.main\:table.header.lastName
 table.header.lastTime=$org.olat.group.ui.main\:table.header.lastTime
 table.header.lastusage=Letzter Zugriff
+table.header.license=Lizenz
 table.header.lifecycle.end=$\:cif.date.end
 table.header.lifecycle.label=Semester
 table.header.lifecycle.softkey=Semesterbezeichnung
