--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_en.properties
@@ -105,7 +105,7 @@ cif.description=Description
 cif.displayname=Title of learning resource
 cif.downloaded=Number of exports
 cif.error.allempty=Please fill in at least one form field.
-cif.error.corrupted=The learning resource is corrupted and can not be displayed. Contact your support staff or use the delete link to remove this resource from the system.
+cif.error.corrupted=The learning resource is corrupted and can not be displayed. Contactj your support staff or use the delete link to remove this resource from the system.
 cif.error.description.empty=Please fill in the field "Description".
 cif.error.displayname.empty=Please fill in the field "Title of learning resource".
 cif.error.idnotint=This identification number does not exist.
@@ -117,6 +117,7 @@ cif.expenditureOfWork=Expenditure of work
 cif.externalid=External ID
 cif.externalref=Reference
 cif.externalref.hover=An external reference, displayed on the course overview page.
+cif.freetext=License text
 cif.groups=Groups
 cif.id=ID
 cif.id.na=Not available
@@ -124,6 +125,9 @@ cif.initialAuthor=Creator
 cif.lastUsage.na=-
 cif.lastusage=Last access
 cif.launched=Number of launches
+cif.license=License
+cif.license.text=License text
+cif.licensor=Licensor
 cif.location=Location
 cif.mainLanguage=Main language
 cif.managedflags=Externally managed modules
@@ -338,6 +342,7 @@ info.entry.read.only=Entry was successfully finished.
 info.header=<i class\='o_icon o_icon-lg o_icon_info_resource'> </i>
 info.message.change.title=This course has been changed successfully to [deactivated].
 launch.noaccess=You have not enough access rights to launch this learning resource.
+license.admin.title=Learning resources
 lifecycle.label=Name
 lifecycle.softkey=Identifyer
 lifecycle.validFrom=$\:cif.date.start
@@ -542,6 +547,7 @@ table.header.key=ID
 table.header.lastName=$org.olat.group.ui.main\:table.header.lastName
 table.header.lastTime=$org.olat.group.ui.main\:table.header.lastTime
 table.header.lastusage=Last access
+table.header.license=License
 table.header.lifecycle.end=$\:cif.date.end
 table.header.lifecycle.label=Semester
 table.header.lifecycle.softkey=Semester ID
