OO-3353: add batch action to extend due dates in task course element (patch S. Clemenz)

--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_en.properties
@@ -82,6 +82,7 @@ download.task=Download task
 download.task.infos={0} ({1} MB)
 duedate.standard=Standard date\: {0}
 duedates=Extend
+duedates.multiple.user=Extend for the choosen users
 duedates.user=Extend for "{0}"
 edit.task=Edit task
 editor.revisions.title=Revision configuration
@@ -89,6 +90,7 @@ editor.title=Submission configuration
 embedded.editor=Submit with OpenOLAT text editor
 enabled=enabled
 error.assignment.closed=Assignment is closed
+error.atleast.task=You need to choose at least one task.
 error.duplicate.coaching=This user is a member of multiple groups in this task.
 error.duplicate.memberships=The following users are members of multiple groups, and are therefore required to hand in this assignment multiple times\: {1}
 error.editor.atLeastOne=You must choose at least one kind of editor.
