--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
@@ -83,12 +83,14 @@ download.task.infos={0} ({1} MB)
 duedate.standard=Standard Datum\: {0}
 duedates=Verl\u00E4ngern
 duedates.user=Verl\u00E4ngern f\u00FCr "{0}"
+duedates.multiple.user=Verl\u00E4ngern f\u00FCr ausgew\u00E4hlte Benutzer
 edit.task=Aufgabe bearbeiten
 editor.revisions.title=R\u00FCckgabe Konfiguration
 editor.title=Abgabe Konfiguration
 embedded.editor=Abgabe mit OpenOLAT Texteditor
 enabled=eingeschaltet
 error.assignment.closed=Zuweisung ist geschlossen.
+error.atleast.task=Sie m\u00FCssen mindestens eine Aufgabe w\u00E4hlen
 error.duplicate.coaching=Der Teilnehmer ist Teilnehmer von mehreren Gruppen f\u00FCr diese Aufgabe.
 error.duplicate.memberships=Die folgenden Teilnehmer sind Mitglieder von mehreren der eingebundenen Gruppen, und m\u00FCssen diese Aufgabe deshalb mehrfach bearbeiten\: {1}
 error.editor.atLeastOne=Sie m\u00FCssen mindestens einen Editortyp w\u00E4hlen.
