OO-3170: Licenses in the folder course node

--- a/src/main/java/org/olat/core/commons/modules/bc/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/modules/bc/_i18n/LocalStrings_de.properties
@@ -68,14 +68,15 @@ eportfolio=Diese Datei als Artefakt dem ePortfolio hinzuf\u00FCgen.
 failed=Operation fehlgeschlagen
 file=Datei
 header.Info=Metadaten
+header.license=Lizenz
 header.Modified=Ge\u00E4ndert
 header.Name=Name
 header.Size=Gr\u00F6sse
 header.Status=Status
 header.Type=Typ
 header.Version=Version
-
 invalid.file.names=Folgende Dateinamen sind ung\u00FCltig, weil sie unzul\u00E4ssige Zeichen enthalten (/,\:, etc.). Bitte \u00E4ndern Sie die Namen entsprechend.
+license.admin.title=Ordner
 lock.description=Eine oder mehrere Dateien sind gesperrt.
 lock.title=Datei(en) gesperrt
 mc.copy=Objekte kopieren
