--- a/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_de.properties
@@ -16,9 +16,12 @@ mf.error.filename.invalidchars=Der Name des Objektes enth\u00E4lt ung\u00FCltige
 mf.file=Datei
 mf.filename=Dateiname
 mf.filename.warning=<i class\="o_icon o_icon_warn"> </i> Der Dateiname enthielt unzul\u00E4ssige Zeichen. Diese wurden entfernt.
+mf.freetext=Lizenztext
 mf.header=Metadaten Datei/Ordner
 mf.language=Sprache
 mf.lastModified=Datum letzte \u00C4nderung
+mf.license=Lizenz
+mf.licensor=Lizenzgeber
 mf.locked=Gesperrt
 mf.locked.description={0} am {1}
 mf.lockedBy=Gesperrt von
