--- a/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_de.properties
@@ -13,9 +13,9 @@ admin.title=Lizenzen
 edit.license.type=Lizenz bearbeiten
 error.is.default.license.type=Sie k\u00f6nnen diese Lizenz nicht deaktivieren, da diese Lizenz die iniziale Lizenz ist. \u00c4ndern Sie bitte zuerst die iniziale Lizenz.
 error.license.type.name.exists=Dieser Name existiert bereits. Der Name muss eindeutig sein.
-license.quickview.text=Lizenztext
-license.quickview.licensor=Lizenzgeber
-license.quickview.type=Lizenz
+license.popup.text=Lizenztext
+license.popup.licensor=Lizenzgeber
+license.popup.type=Lizenz
 license.type.css.class=CSS Klasse
 license.type.down=Runter
 license.type.text=Lizenztext
