--- a/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/services/license/ui/_i18n/LocalStrings_en.properties
@@ -13,9 +13,9 @@ admin.title=Licenses
 edit.license.type=Edit license
 error.is.default.license.type=You can not deactivate this license, because it is the initial license. Please previously change the initial license.
 error.license.type.name.exists=This name already exists. The name has to be unique.
-license.quickview.text=License text
-license.quickview.licensor=Licensor
-license.quickview.type=License
+license.popup.text=License text
+license.popup.licensor=Licensor
+license.popup.type=License
 license.type.css.class=CSS class
 license.type.down=Down
 license.type.text=License text
