--- a/src/main/java/org/olat/core/commons/modules/bc/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/modules/bc/_i18n/LocalStrings_en.properties
@@ -68,14 +68,15 @@ eportfolio=Add this file as artefact to a portfolio.
 failed=Operation failed
 file=File
 header.Info=Metadata
+header.license=License
 header.Modified=Modified
 header.Name=Name
 header.Size=Size
 header.Status=Status
 header.Type=Type
 header.Version=Version
-
 invalid.file.names=The following file names are invalid since they contain special characters (/, \:, etc.). Please modify your names accordingly.
+license.admin.title=Folder
 lock.description=One or more files are locked.
 lock.title=Locked file(s)
 mc.copy=Copy object
