--- a/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/modules/bc/meta/_i18n/LocalStrings_en.properties
@@ -16,9 +16,12 @@ mf.error.filename.invalidchars=The object's name contains invalid characters.
 mf.file=File
 mf.filename=File name
 mf.filename.warning=<i class\="o_icon o_icon_warn"> </i> This file name contained invalid characters which were removed.
+mf.freetext=License text
 mf.header=Metadata file/folder
 mf.language=Language
 mf.lastModified=Last modified\:
+mf.license=License
+mf.licensor=Licensor
 mf.locked=Locked
 mf.locked.description={0} on {1}
 mf.lockedBy=Locked by
