OO-3355: if the question doesn't exist, show a message

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -279,5 +279,6 @@ topnav.qpool=Fragenpool
 topnav.qpool.alt=Fragedatenbanken und Freigabe von Fragen
 unshare.item=Entfernen
 used=Verwendet
+warning.item.deleted=Die Frage wurde gel\u00F6scht oder entfernt.
 warning.qpool.index.emtpy=Die Fragenpool-Infoseite wurde nicht konfiguriert. Bitten Sie den Systemadministrator, eine Infoseite im <strong>Administrationsbereich des Fragenpools</strong> hinzuzuf\u00FCgen.
 
