--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -281,4 +281,5 @@ topnav.qpool=Question bank
 topnav.qpool.alt=Question pools and shares
 unshare.item=Remove
 used=Used
+warning.item.deleted=The question has been deleted or removed.
 warning.qpool.index.emtpy=The question pool info page has not been configured properly. Please ask the system administrator to add an info page in the <strong>question pool administration</strong>.
