OO-3363: restrict search of lectures in coaching tool

--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_de.properties
@@ -72,7 +72,7 @@ error.atleastone.lecture=Bitte w\u00E4hlen Sie mindestens ein Lektionenblock.
 error.integer.between=Die Eingabe muss eine Zahl zwischen {0} und {1} sein.
 error.integer.positive=Die Eingabe muss eine positive Zahl sein.
 error.reason.mandatory=Begr\u00FCndung ist erforderlich
-error.search.form.notempty=$org.olat.admin.user\:error.search.form.notempty
+error.search.form.notempty=F\u00FCllen Sie bitte mindestens ein Feld mit zwei Charakter aus.
 export.footer.lectures.hint=x \= Lektion abwesend
 export.header.entry=Kurs\: {0}
 export.header.lectureblocks=Lektionenblock\: {0} vom {1} von {2} bis {3}
