--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_en.properties
@@ -72,7 +72,7 @@ error.atleastone.lecture=Please choose at least one lecture block.
 error.integer.between=The input must be a number between {0} and {1}
 error.integer.positive=The number must be positive.
 error.reason.mandatory=Reason is mandatory
-error.search.form.notempty=$org.olat.admin.user\:error.search.form.notempty
+error.search.form.notempty=Please fill in at least one field with two characters.
 export.footer.lectures.hint=x \= lecture absent
 export.header.entry=Course\: {0}
 export.header.lectureblocks=Lectures block\: {0} the {1} at {2} until {3}
