--- a/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/lecture/ui/_i18n/LocalStrings_fr.properties
@@ -72,7 +72,7 @@ error.atleastone.lecture=Choisissez au moins un cours bloc s'il vous pla\u00EEt.
 error.integer.between=La valeur doit \u00EAtre un nombre entre {0} et {1}
 error.integer.positive=La valeur doit \u00EAtre un nombre positif.
 error.reason.mandatory=La justification est requis.
-error.search.form.notempty=$org.olat.admin.user\:error.search.form.notempty
+error.search.form.notempty=Veuillez remplir au minimum un champ du formulaire avec deux caract\u00E8res s'il vous pla\u00EEt. 
 export.footer.lectures.hint=x \= Absence
 export.header.entry=Cours\: {0}
 export.header.lectureblocks=Cours bloc\: {0} de {1} de {2} \u00E0 {3}
