OO-3339: reimplement correction workflow in assessment tool for QTI 2.1

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -66,6 +66,7 @@ extra.time.warning=<strong>Achtung:</strong> Die Zeit im Pr\u00FCfungsmodus wird
 fieldset.allowRelativeLinksForm=Sicherheitseinstellung
 fieldset.chosecreateeditfile=Informationstext (HTML-Seite)
 file.name=Gew\u00E4hlte Datei
+grade.nobody=Es gibt kein Resultat zu korrigieren.
 info.assessment=Bei diesem Test k\u00F6nnen Ihre Resultate von den Administratoren und den Betreuern dieses Kurses eingesehen werden. 
 info.nodedelete=Die bisher angefallenen Daten dieses Kursbausteins werden in Ihrem pers\u00F6nlichen Ordner unter private/archive/[Kursname]/. archiviert.
 info.selfassessment=Beim Selbsttest werden alle Eingaben anonym gespeichert.
