--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_it.properties
@@ -50,6 +50,7 @@ error.test.undefined.short=Non \u00E8 definito alcun test per "{0}".
 fieldset.allowRelativeLinksForm=Preferenza di sicurezza
 fieldset.chosecreateeditfile=Testo informativo (pagina HTML)
 file.name=File selezionato
+grade.nobody=Non ci sono risultati da correggere.
 hour.short=h
 info.assessment=I risultati di questo test possono essere visionati dagli amministratori e dai tutori di questo corso.
 info.nodedelete=I dati finora raccolti su questo elemento di corso vengono archiviati nella Sua cartella personale sotto private/archive/[nome del corso]/.
