--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_pt_BR.properties
@@ -66,6 +66,7 @@ extra.time.warning=<strong>Aviso\:</strong> O tempo no modo de avalia\u00E7\u00E
 fieldset.allowRelativeLinksForm=Configura\u00E7\u00E3o de seguran\u00E7a
 fieldset.chosecreateeditfile=Informa\u00E7\u00E3o (arquivo HTML)
 file.name=Arquivo escolhido
+grade.nobody=N\u00E3o h\u00E1 resultados para corrigir
 hour.short=h
 info.assessment=Os resultados de seu teste s\u00E3o vis\u00EDveis aos administradores e tutores deste curso. Sua pontua\u00E7\u00E3o pode ser usada para outros c\u00E1lculos dentro deste curso.
 info.nodedelete=Todos os dados de usu\u00E1rio deste curso ser\u00E3o arquivados em sua pasta pessoal, sess\u00E3o privada/arquivo/[nomedocurso]/.
