--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -75,6 +75,8 @@ confirm.suspend.test=$org.olat.modules.iq\:confirmSuspend
 confirmation=Best\u00E4tigung
 correct.solution=Korrekte L\u00F6sung
 correction=Korrigieren
+correction.workflow=Korrekturworkflow
+correction.workflow.anonymous=Anonym
 create.12.resources=Neue QTI 1.2 Tests und Fragen zulassen
 debug.outcomes=Output Daten
 debug.responses=Antworten Daten
