--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
@@ -75,6 +75,8 @@ confirm.suspend.test=$org.olat.modules.iq\:confirmSuspend
 confirmation=Confirmation
 correct.solution=Correct solution
 correction=Grade
+correction.workflow=Correction workflow
+correction.workflow.anonymous=Anonymous
 create.12.resources=Allow new QTI 1.2 tests and questions
 debug.outcomes=Output data
 debug.responses=Responses data
