--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
@@ -1,19 +1,44 @@
 #Tue Nov 15 16:25:36 CET 2016
 assessed.identity=Benutzer
+number.assessed.identity={0}. Benutzer
 comment=Kommentar
+comment.help=Kommentar sind sichbar von Benutzer sowie andere Betreuer.
 comment.test=Test Kommentar
+confirm.save=Wollen Sie den Resultaten als endg\u00FCltig speichern?
 correction=Korrigieren
 correction.min.max.score=Punkte m\u00FCssen zwischen {0} und {1} sein.
 correction.test.title=Korrigieren
-error.in.form=Die Änderungen können nicht gespeichert werden, da bei einer oder mehreren Fragen Fehler auftreten. Die detaillierte Fehlerbeschreibung befindet sich bei der betroffenen Frage.
+correction.assessment.items=Fragen
+correction.assessed.identities=Benutzer
+correction.auto=Auto
+error.in.form=Die \u00C4nderungen k\u00F6nnen nicht gespeichert werden, da bei einer oder mehreren Fragen Fehler auftreten. Die detaillierte Fehlerbeschreibung befindet sich bei der betroffenen Frage.
 grade.no.items=Es gibt kein Resultat f\u00FCr diese Frage zu korrigieren.
-grade.nobody=Es gibt kein Resultat zu korrigieren.
+override.score=Punkte \u00FCberschreiben
 next.item=Zur n\u00E4chsten Frage
+next.user=Zur n\u00E4chsten Benutzer
 not.responded=Die Frage wurde nicht beantwortet
 overview.tests=\u00DCbersicht und abschliessen
 previous.item=Zur\u00FCck zur letzte Frage
+previous.user=Zur\u00FCck zur letzten Benutzer
 save.next=Speichern und n\u00E4chste Frage
 save.tests=Als endg\u00FCltiges Resultat speichern
 score=Punkte
+status=Status
+table.header.answered=Antwortet
+table.header.notAnswered=Nicht geantwortet
+table.header.user=Teilnehmer
 table.header.username=Benutzername
+table.header.item.title=Frage
+table.header.item.type=Fragetyp
+table.header.corrected=Korrigiert
+table.header.to.review=\u00DCberpr\u00FCfen
+table.header.score=Punkte
+table.header.section=Sektion
+table.header.not.corrected=Nicht korrigiert
+to.review=\u00DCberpr\u00FCfen
+view.solution=L\u00F6sung ansehen
 warning.not.submitted=Antwort wurde nicht von Benutzer abgegeben
+warning.no.assessment.item=Es gibt nichts zu korrigieren
+waring.atleast.one=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen.
+warning.assessment.item.locked=Antwort ist bereit von einem anderen Benutzer gesperrt: {0}
+warning.confirm.save=$\:confirm.save Sie haben noch unkorrigierte Fragen.
