--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -77,6 +77,7 @@ inform.users.body=Dear course participant,\r\n\r\nA test or questionnaire starte
 inform.users.no=No
 inform.users.subject=OLAT\: Modification in course {0}
 inform.users.yes=Yes
+grade.nobody=There is no results to correct
 label.points=Score
 log.title=Change log
 minute.short=m
