--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_fr.properties
@@ -66,6 +66,7 @@ extra.time.warning=<strong>Attention\:</strong> la p\u00E9riode du mode d'\u00E9
 fieldset.allowRelativeLinksForm=Param\u00E8tres de s\u00E9curit\u00E9
 fieldset.chosecreateeditfile=Texte informatif (page html)
 file.name=Fichier choisi
+grade.nobody=Il n'y a pas de r\u00E9sultats \u00E0 corriger.
 hour.short=h
 info.assessment=Pour ce test, les administrateurs et les tuteurs pourront consulter vos r\u00E9sultats. 
 info.nodedelete=Les donn\u00E9es r\u00E9sultant de cet \u00E9l\u00E9ment de cours sont archiv\u00E9es dans votre dossier personnel sous private/archive/[nom du cours]/.
