--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_zh_CN.properties
@@ -70,7 +70,7 @@ error.test.undefined.short=\u6CA1\u6709\u4E3A"{0}"\u5B9A\u4E49\u6D4B\u9A8C
 fieldset.allowRelativeLinksForm=\u5B89\u5168\u8BBE\u7F6E
 fieldset.chosecreateeditfile=\u7B80\u4ECB\u4FE1\u606F(HTML\u9875\u9762)
 file.name=\u5DF2\u9009\u7684\u6587\u4EF6
-
+grade.nobody=\u6CA1\u6709\u8981\u66F4\u6B63\u7684\u6210\u7EE9\u3002
 info.assessment=\u8BE5\u5B66\u7A0B\u7684\u7BA1\u7406\u5458\u548C\u6559\u5E08\u80FD\u770B\u5230\u60A8\u7684\u6D4B\u9A8C\u6210\u7EE9\u5355\uFF0C\u6D4B\u9A8C\u5F97\u5206\u53EF\u6839\u636E\u5B66\u7A0B\u5404\u5143\u7D20\u7684\u6743\u91CD\u8FDB\u884C\u8BA1\u7B97\u3002
 info.nodedelete=\u8BE5\u5B66\u7A0B\u8282\u70B9\u7684\u6240\u6709\u7528\u6237\u6570\u636E\u5C06\u88AB\u5F52\u6863\u5230\u4E2A\u4EBA\u6587\u4EF6\u5939\u4E2D\u7684private/archive/[coursename]\u90E8\u5206\u4E2D\u3002
 info.selfassessment=\u81EA\u6D4B\u7684\u6210\u7EE9\u5355\u5C06<b>\u4E0D\u4F1A</b>\u88AB\u5B66\u7A0B\u7684\u7BA1\u7406\u5458\u548C\u6559\u5E08\u8BBF\u95EE\u3002
