--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -1,13 +1,16 @@
 #Tue Aug 23 10:23:23 CEST 2016
 assessed.identity=assessed user
+number.assessed.identity={0}. user
 comment=Comment
+comment.help=Comments are visible to user as to other coaches.
 comment.test=Test comment
+confirm.save=Do you want to save the results as completed?
 correction=Correction
 correction.min.max.score=Score need to be between {0} and {1}.
 correction.test.title=Grade
 error.in.form=The changes cannot be saved, as there are errors in one or more question items. The detailed error description can be found by the corresponding question item.
 grade.no.items=There is no results to correct for this question.
-grade.nobody=There is no results to correct
+override.score=Override score
 next.item=Next question
 not.responded=The question was not responded
 overview.tests=Overview and closing
@@ -15,6 +18,13 @@ previous.item=Previous question
 save.next=Save and next question
 save.tests=Save results as completed
 score=Score
+table.header.user=Participant
+table.header.score=Points
+table.header.item.type=Question type
 table.header.username=Username
+to.review=Review
+view.solution=View solution
+waring.atleast.one=You need at least a question.
 warning.not.submitted=Answer was not submitted by the user
+warning.confirm.save=$\:confirm.save You have still uncorrected questions.
 
