OO-3364; in QTI 2.1 results reports show the answer with all the data, solution is collapsed (but not in print view)

--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -197,6 +197,7 @@ results.of.points=Punkten
 results.of.questions=Fragen
 results.points=Punkte
 results.questions.overview=Fragen\u00FCbersicht
+results.report=Resultate
 results.score.yourscore=$org.olat.course.nodes.iq\:score.yourscore
 results.session.status=Status
 results.session.status.final=Beantwortet
@@ -228,6 +229,7 @@ tab.options=Optionen
 tab.reset.data=Daten zur\u00FCcksetzen
 table.header.action=Aktion
 table.header.corrected=Korrigiert
+table.header.correction=$\:correction
 table.header.duration=Dauer
 table.header.finalScore=Endg\u00FCltige Punkte
 table.header.itemSessions=\# Fragen
