--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
@@ -197,6 +197,7 @@ results.of.points=points
 results.of.questions=questions
 results.points=points
 results.questions.overview=Question overview
+results.report=Results
 results.score.yourscore=$org.olat.course.nodes.iq\:score.yourscore
 results.session.status=Status
 results.session.status.final=Answered
@@ -228,6 +229,7 @@ tab.options=Options
 tab.reset.data=Reset data
 table.header.action=Action
 table.header.corrected=Corrected
+table.header.correction=$\:correction
 table.header.duration=Duration
 table.header.finalScore=Final score
 table.header.itemSessions=\# questions
