--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_fr.properties
@@ -195,6 +195,7 @@ results.of.points=points
 results.of.questions=Questions
 results.points=Points
 results.questions.overview=Aper\u00E7u des questions
+results.report=R\u00E9sultats
 results.score.yourscore=$org.olat.course.nodes.iq\:score.yourscore
 results.session.status=Status
 results.session.status.final=R\u00E9pondu
@@ -226,6 +227,7 @@ tab.options=Options
 tab.reset.data=Mise \u00E0 z\u00E9ro de donn\u00E9es
 table.header.action=Action
 table.header.corrected=Corrig\u00E9
+table.header.correction=$\:correction
 table.header.duration=Dur\u00E9e
 table.header.finalScore=Points d\u00E9finitifs
 table.header.itemSessions=\# questions
