--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_it.properties
@@ -183,6 +183,7 @@ suspend.test=$org.olat.modules.iq\:suspendAssess
 tab.options=Opzioni
 tab.reset.data=Azzerare dati
 table.header.action=Azione
+table.header.correction=$\:correction
 table.header.duration=Durata
 table.header.lastModified=Data
 table.header.results=Punteggio
