--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_pt_BR.properties
@@ -223,6 +223,7 @@ tab.options=Op\u00E7\u00F5es
 tab.reset.data=Redefinir dados
 table.header.action=A\u00E7\u00E3o
 table.header.corrected=Corrigido
+table.header.correction=$\:correction
 table.header.duration=Dura\u00E7\u00E3o
 table.header.finalScore=Pontua\u00E7\u00E3o final
 table.header.itemSessions=\# quest\u00F5es
