--- a/src/main/java/org/olat/core/gui/control/generic/title/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/core/gui/control/generic/title/_i18n/LocalStrings_fr.properties
@@ -1,3 +1,3 @@
 #Mon Feb 08 12:27:57 CET 2010
-titlewrapper.linkclosed=Cacher description
-titlewrapper.linkopened=Montrer description
+titlewrapper.linkclosed=Cacher la description
+titlewrapper.linkopened=Montrer la description
