--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_zh_CN.properties
@@ -186,6 +186,7 @@ table.header.duration=\u6301\u7EED\u65F6\u95F4
 table.header.lastModified=\u65E5\u671F
 table.header.results=\u5206\u6570
 table.header.corrected=\u66F4\u6B63
+table.header.correction=$\:correction
 table.header.finalScore=\u6700\u7EC8\u5206\u6570
 table.header.itemSessions=\#\u95EE\u9898
 table.header.manualScore=\u624B\u52A8\u5206\u6570
