OO-3366: option to show the max score of an assessment item in test

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -111,6 +111,7 @@ qti.form.enablecancel=Allow to cancel
 qti.form.enablesuspend=Allow to suspend
 qti.form.fullwindow=Display only module, hide LMS
 qti.form.limit.attempts=Limit the number of attempts
+qti.form.max.score.item=Show questions max. points
 qti.form.menudisplay=Show menu navigation 
 qti.form.menuenable=Allow menu navigation 
 qti.form.menurender=Menu layout
