--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_de.properties
@@ -20,7 +20,9 @@ archive.table.header.section=Sektion "{0}"
 archive.table.header.test=Test
 assessment.comment.legend=Pers\u00F6nliche Notizen
 assessment.comment.legend.help=Sie k\u00F6nnen ein Kommentar hier schreiebn. Diese Notizen sind privat und werden nicht in einem Pr\u00FCfung ber\u00FCcksichtigt.
-assessment.item.mark=F\u00FCgen Sie eine private Markierung hinzu als Erinnerung um diese Frage sp\u00E4ter noch einmal anzuschauen 
+assessment.item.mark=F\u00FCgen Sie eine private Markierung hinzu als Erinnerung um diese Frage sp\u00E4ter noch einmal anzuschauen
+assessment.item.point={0} Punkt
+assessment.item.points={0} Punkte
 assessment.item.status.answered=Beantwortet
 assessment.item.status.finished=Erledigt
 assessment.item.status.modelSolution=Musterl\u00F6sung
@@ -155,6 +157,7 @@ qti.form.enablecancel=$org.olat.course.nodes.iq\:qti.form.enablecancel
 qti.form.enablesuspend=$org.olat.course.nodes.iq\:qti.form.enablesuspend
 qti.form.hide.lms=$org.olat.course.nodes.iq\:qti.form.fullwindow
 qti.form.limit.attempts=$org.olat.course.nodes.iq\:qti.form.limit.attempts
+qti.form.max.score.item=$org.olat.course.nodes.iq\:qti.form.max.score.item
 qti.form.menudisplay=$org.olat.course.nodes.iq\:qti.form.menudisplay
 qti.form.questionprogress=$org.olat.course.nodes.iq\:qti.form.questionprogress
 qti.form.questiontitle=$org.olat.course.nodes.iq\:qti.form.questiontitle
