--- a/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/_i18n/LocalStrings_en.properties
@@ -21,6 +21,8 @@ archive.table.header.test=Test
 assessment.comment.legend=Personal notes
 assessment.comment.legend.help=Please use the following text box if you need to provide any additional information, comments or feedback during this test. This notice is private and will be taken in account for an exam.
 assessment.item.mark=Add personal marking as a reminder to review this question
+assessment.item.point={0} point
+assessment.item.points={0} points
 assessment.item.status.answered=Answered
 assessment.item.status.finished=Completed
 assessment.item.status.modelSolution=Model solution
@@ -155,6 +157,7 @@ qti.form.enablecancel=$org.olat.course.nodes.iq\:qti.form.enablecancel
 qti.form.enablesuspend=$org.olat.course.nodes.iq\:qti.form.enablesuspend
 qti.form.hide.lms=$org.olat.course.nodes.iq\:qti.form.fullwindow
 qti.form.limit.attempts=$org.olat.course.nodes.iq\:qti.form.limit.attempts
+qti.form.max.score.item=$org.olat.course.nodes.iq\:qti.form.max.score.item
 qti.form.menudisplay=$org.olat.course.nodes.iq\:qti.form.menudisplay
 qti.form.questionprogress=$org.olat.course.nodes.iq\:qti.form.questionprogress
 qti.form.questiontitle=$org.olat.course.nodes.iq\:qti.form.questiontitle
