--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -111,6 +111,7 @@ qti.form.enablecancel=Abbrechen erlauben
 qti.form.enablesuspend=Unterbrechen erlauben
 qti.form.fullwindow=Nur Modul anzeigen, LMS ausblenden
 qti.form.limit.attempts=Anzahl L\u00F6sungsversuche limitieren
+qti.form.max.score.item=Max. Punkte der Frage anzeigen
 qti.form.menudisplay=Menu-Navigation anzeigen
 qti.form.menuenable=Menu-Navigation erlauben
 qti.form.menurender=Menu Darstellung
