OO-3370: show the points in the check box and available points

--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_de.properties
@@ -8,6 +8,7 @@ box.assessment=Per Box Bewertung
 box.check=Check
 box.points=Punkte
 box.points.info=({0} Punkte)
+box.points.info.score=({0} von {1} Punkten)
 checkbox.title=Titel
 checklist=Checkliste
 checklist.point.example=Punkte (min\: {0} / max\: {1})
