--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_en.properties
@@ -8,6 +8,7 @@ box.assessment=Edit per checkbox
 box.check=Check
 box.points=Score
 box.points.info=({0} Points)
+box.points.info.score=({0} of {1} Points)
 checkbox.title=Title
 checklist=Checklists
 checklist.point.example=Points (min\: {0} / max\: {1})
