--- a/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/course/nodes/cl/ui/_i18n/LocalStrings_fr.properties
@@ -8,6 +8,7 @@ box.assessment=Editer par case \u00E0 cocher
 box.check=S\u00E9lectionn\u00E9
 box.points=Points
 box.points.info=({0} points)
+box.points.info.score=({0} de {1} points)
 checkbox.title=Titre
 checklist=Listes de contr\u00F4le
 checklist.point.example=Points (min.\: {0} / max.\: {1})
