OO-3339: separate columns in auto and manual correction

--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
@@ -30,7 +30,8 @@ table.header.user=Teilnehmer
 table.header.username=Benutzername
 table.header.item.title=Frage
 table.header.item.type=Fragetyp
-table.header.corrected=Korrigiert
+table.header.autoCorrected=Auto
+table.header.corrected=Manuell
 table.header.to.review=\u00DCberpr\u00FCfen
 table.header.score=Punkte
 table.header.section=Sektion
