--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -18,6 +18,8 @@ previous.item=Previous question
 save.next=Save and next question
 save.tests=Save results as completed
 score=Score
+table.header.autoCorrected=Auto
+table.header.corrected=Manual
 table.header.user=Participant
 table.header.score=Points
 table.header.item.type=Question type
