OO-3339: add tools to mark and unmark all questions as to review

--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_de.properties
@@ -24,6 +24,7 @@ save.next=Speichern und n\u00E4chste Frage
 save.tests=Als endg\u00FCltiges Resultat speichern
 score=Punkte
 status=Status
+table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.answered=Antwortet
 table.header.notAnswered=Nicht geantwortet
 table.header.user=Teilnehmer
@@ -37,6 +38,8 @@ table.header.score=Punkte
 table.header.section=Sektion
 table.header.not.corrected=Nicht korrigiert
 to.review=\u00DCberpr\u00FCfen
+tool.review.all=Alle markieren
+tool.unreview.all=Markierung aufheben
 view.solution=L\u00F6sung ansehen
 warning.not.submitted=Antwort wurde nicht von Benutzer abgegeben
 warning.no.assessment.item=Es gibt nichts zu korrigieren
