--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_en.properties
@@ -18,6 +18,7 @@ previous.item=Previous question
 save.next=Save and next question
 save.tests=Save results as completed
 score=Score
+table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.autoCorrected=Auto
 table.header.corrected=Manual
 table.header.user=Participant
@@ -25,6 +26,8 @@ table.header.score=Points
 table.header.item.type=Question type
 table.header.username=Username
 to.review=Review
+tool.review.all=Mark all
+tool.unreview.all=Remove marks
 view.solution=View solution
 waring.atleast.one=You need at least a question.
 warning.not.submitted=Answer was not submitted by the user
