--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_it.properties
@@ -12,5 +12,6 @@ previous.item=Domanda precedente
 save.next=Salvare e domanda successiva
 save.tests=Salvare come completato
 score=Punteggio
+table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.username=Nome utente
 warning.not.submitted=Non \u00E8 stata inviata risposta dall'utente
