--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_pt_BR.properties
@@ -14,5 +14,6 @@ previous.item=Quest\u00E3o anterior
 save.next=Salvar e pr\u00F3xima pergunta
 save.tests=Salvar resultados como conclu\u00EDdos
 score=Pontua\u00E7\u00E3o
+table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.username=Usu\u00E1rio
 warning.not.submitted=A resposta n\u00E3o foi enviada pelo usu\u00E1rio
