--- a/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/assessment/_i18n/LocalStrings_fr.properties
@@ -14,5 +14,6 @@ previous.item=Question pr\u00E9c\u00E9dente
 save.next=Sauver et question suivante
 save.tests=Sauver les r\u00E9sultats d\u00E9finitifs
 score=R\u00E9sultats
+table.header.action=<i class='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.username=Nom d'utilisateur
 warning.not.submitted=La r\u00E9ponse n'a pas \u00E9t\u00E9 soumise par l'utilisateur
