--- a/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/gta/ui/_i18n/LocalStrings_de.properties
@@ -324,6 +324,8 @@ warning.group.submit=Dies ist eine Gruppenaufgabe\! Das abgegebene Dokument ist 
 warning.group.task=Dies ist eine Gruppenaufgabe\! Aufgabenzuweisung, Abgabe sowie die Bewertung werden f\u00FCr die Gruppe vorgenommen. Besprechen Sie mit den anderen Teilnehmern ihrer Gruppe wie sie gemeinsam die Aufgabe ausw\u00E4hlen und bearbeiten wollen.
 warning.no.task.choosed=Wie es scheint war es Ihnen aufgrund von \u00C4nderungen am Kurselement nicht m\u00F6glich eine Aufgabe f\u00FCr dieses Aufgabenelement auszuw\u00E4hlen.
 warning.no.task.choosed.coach=Wie es scheint war es der Assignee aufgrund von \u00C4nderungen am Kurselement nicht m\u00F6glich eine Aufgabe f\u00FCr dieses Aufgabenelement auszuw\u00E4hlen.
+warning.reopen=Wenn Sie das Abgabedatum verl\u00E4ngert, wird diese Aufgabe neu er\u00F6ffnet. 
+If you decide to extend the submission deadline. This will automatically reopen the task submission.
 warning.submit.documents.edited=Sie k\u00F6nnen die Aufgabe nicht abgeben, da das Dokument "{1}" noch von "{0}" bearbeitet wird.
 warning.tasks.in.process.delete.text=Wollen Sie wirklich dieser Aufgabe l\u00F6schen? Es gibt bereits Benutzer die den Aufgabenprozess gestartet haben. Das kann f\u00FCr diese Benutzer zu Problemen f\u00FChren.
 warning.tasks.in.process.delete.title=$\:warning.tasks.in.process.title
