OO-3352: add option to enable "Strict-Transport-Security" and "X-Content-Type-Options" headers

--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
@@ -1,11 +1,13 @@
 #Thu Aug 06 11:28:42 CEST 2009
 admin.menu.title=Security
 admin.menu.title.alt=Change security settings
+sec.content.type.options=Prevent browser to guess script and style content with HTTP header
 sec.title=Security settings
 sec.description=Choose the security level depending on the requirements of your institution. To achieve the highest security level, all of the security features listed below have to be activated.
 sec.force.download=Force file download in folders
 sec.topframe=Prevent embedding in frames using JavaScript code
 sec.wiki=Block wiki resources
+sec.strict.transport.sec=Prevent downgrade of HTTPS to HTTP with HTTP header
 sec.top.frame.explanation=Due to compatibility reasons, the rich text component (TinyMCE) of OpenOLAT cannot be embedded in a frame.
 sec.xframe.sameorigin=Prevent embedding in frames by sending HTTP header X-FRAME-OPTIONS=SAMEDOMAIN
 
