--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_de.properties
@@ -1,10 +1,12 @@
 #Tue Jan 14 11:03:57 CET 2014
 admin.menu.title=Sicherheit
 admin.menu.title.alt=Sicherheitseinstellungen anpassen
+sec.content.type.options=Verhindert Browser Script und Style Dateien mit HTTP Header zu raten
 sec.description=W\u00E4hlen Sie den notwendigen Sicherheitslevel je nach Anforderungen Ihrer Institution. Um die h\u00F6chste Sicherheitsstufe zu erreichen m\u00FCssen s\u00E4mtliche untenstehenden Sicherheitsfunktionen eingeschaltet sein. 
 sec.force.download=Dateidownload in Ordner erzwingen
 sec.title=Sicherheitseinstellungen
 sec.topframe=Frame Einbettung per JavaScript verhindern
+sec.strict.transport.sec=Verhindern HTTPS zu HTTP downgrade mit HTTP Header
 sec.wiki=Wiki Ressourcen blockieren
 sec.top.frame.explanation=Aus Kompatibilit\u00e4tsgr\u00fcnden k\u00F6nnen einige Komponenten von OpenOLAT (TinyMCE) nicht in einem Frame dargestellt werden.
 sec.xframe.sameorigin=Frame Einbettung mit HTTP header X-FRAME-OPTIONS=SAMEDOMAIN verhindern
