Prevent double registration on written exams
This can happen when the user is registered manually by a lecturer while
they are trying to register themselves.

--- a/src/main/java/de/unileipzig/xman/exam/_i18n/LocalStrings_de.properties
+++ b/src/main/java/de/unileipzig/xman/exam/_i18n/LocalStrings_de.properties
@@ -153,6 +153,7 @@ ExamLaunchController.earmarkedStudentManually=Ihr Status wurde von {0} in der Pr
 ExamLaunchController.removedFromEarmarkedStudentManually=Sie wurden manuell von {0} in die Prüfung {1} ausgetragen. Ihr letzter Status war 'Vorgemerkt'.
 
 ExamStudentController.info.appNotAvailable=Dieser Termin ist leider nicht mehr verfügbar!
+ExamStudentController.info.alreadyRegistered=Sie sind bereits in diese Prüfung eingeschrieben!
 ExamStudentController.info.subscriptionPeriodOver=Der Anmelderzeitraum ist abgelaufen! Bitte wenden Sie sich an den Dozenten.
 ExamStudentController.info.unsubscriptionPeriodOver=Der Abmeldezeitraum ist abgelaufen! Bitte wenden Sie sich an den Dozenten.
 ExamStudentController.studentRegisteredHimself=Sie haben sich zur Prüfung {0} angemeldet.
