OO-3352: add option to enable "Content-Security-Policy" with specific configuration for 10 directives

--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_de.properties
@@ -1,8 +1,22 @@
 #Tue Jan 14 11:03:57 CET 2014
 admin.menu.title=Sicherheit
 admin.menu.title.alt=Sicherheitseinstellungen anpassen
+sec.content.security.policy=Content Security Policy (CSP)
 sec.content.type.options=Verhindert Browser Script und Style Dateien mit HTTP Header zu raten
+sec.csp.default.src=default-src
+sec.csp.script.src=script-src
+sec.csp.style.src=style-src
+sec.csp.img.src=img-src
+sec.csp.font.src=font-src
+sec.csp.connect.src=connect-src
+sec.csp.frame.src=frame-src
+sec.csp.media.src=media-src
+sec.csp.object.src=object-src
+sec.csp.plugin.type=plugin-type
+sec.csp.default.value=Wert immer dabei: {0}. Beispiel: {1}
 sec.description=W\u00E4hlen Sie den notwendigen Sicherheitslevel je nach Anforderungen Ihrer Institution. Um die h\u00F6chste Sicherheitsstufe zu erreichen m\u00FCssen s\u00E4mtliche untenstehenden Sicherheitsfunktionen eingeschaltet sein. 
+sec.description.headers=Diese Headers verhindert unischere Verh\u00e4ltnis wie ... 
+sec.description.csp=Achtung! Diese Konfiguration kann Kontent bloquieren. Es gibt Werte für jede Directive die nicht konfiguierbar sind, das sind die Werte dass OpenOLAT intern für sich selbst, für Video (youtube und vimeo) und MathJax braucht. Mehr Informationen finden Sie unter <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy" target="_blank">Content-Security-Policy</a>.
 sec.force.download=Dateidownload in Ordner erzwingen
 sec.title=Sicherheitseinstellungen
 sec.topframe=Frame Einbettung per JavaScript verhindern
