--- a/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/security/_i18n/LocalStrings_en.properties
@@ -1,19 +1,26 @@
-#Thu Aug 06 11:28:42 CEST 2009
+#Mon Mar 12 18:22:03 CET 2018
 admin.menu.title=Security
 admin.menu.title.alt=Change security settings
+sec.content.security.policy=Content Security Policy (CSP)
 sec.content.type.options=Prevent browser to guess script and style content with HTTP header
-sec.title=Security settings
+sec.csp.connect.src=connect-src
+sec.csp.default.src=default-src
+sec.csp.default.value=Value always added\: {0}. Example\: {1}
+sec.csp.font.src=font-src
+sec.csp.frame.src=frame-src
+sec.csp.img.src=img-src
+sec.csp.media.src=media-src
+sec.csp.object.src=object-src
+sec.csp.plugin.type=plugin-type
+sec.csp.script.src=script-src
+sec.csp.style.src=style-src
 sec.description=Choose the security level depending on the requirements of your institution. To achieve the highest security level, all of the security features listed below have to be activated.
+sec.description.csp=This configuration can block or break some content. A part of the configuration is fix, these are the values needed by OpenOLAT itself, the MathJax Library and to play video from youtue and vimeo. You will find more informations about content security policy under <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy" target="_blank">Content-Security-Policy</a>.
+sec.description.headers=These headers prevetn unsecure behavior. 
 sec.force.download=Force file download in folders
+sec.strict.transport.sec=Prevent downgrade of HTTPS to HTTP with HTTP header
+sec.title=Security settings
+sec.top.frame.explanation=Due to compatibility reasons, the rich text component (TinyMCE) of OpenOLAT cannot be embedded in a frame.
 sec.topframe=Prevent embedding in frames using JavaScript code
 sec.wiki=Block wiki resources
-sec.strict.transport.sec=Prevent downgrade of HTTPS to HTTP with HTTP header
-sec.top.frame.explanation=Due to compatibility reasons, the rich text component (TinyMCE) of OpenOLAT cannot be embedded in a frame.
-sec.xframe.sameorigin=Prevent embedding in frames by sending HTTP header X-FRAME-OPTIONS=SAMEDOMAIN
-
-
-
-
-
-
-
+sec.xframe.sameorigin=Prevent embedding in frames by sending HTTP header X-FRAME-OPTIONS\=SAMEDOMAIN
